--- a/client/src/SCSS/Navbar.scss
+++ b/client/src/SCSS/Navbar.scss
@@ -5,6 +5,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+
   .navbar-left-container {
     display: flex;
     align-items: center;
