getting result from bani DB

--- a/client/src/SCSS/Navbar.scss
+++ b/client/src/SCSS/Navbar.scss
@@ -21,6 +21,7 @@
     font-family: $font-primary;
   }
   .right-container-heading {
+    text-align: end;
     color: $color-primary;
     font-family: $font-primary;
   }
