--- a/client/src/SCSS/ResultDisplay.scss
+++ b/client/src/SCSS/ResultDisplay.scss
@@ -3,6 +3,7 @@
   padding: 8px;
   width: 100%;
   color: white;
+  text-decoration: none;
   &-heading {
     color: $color-primary;
     font-size: 2.5rem;
